[package]
name = "coderdojo-meetings"
version = "0.1.0"
authors = ["paranoidcake <victorpanayotov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.5.4" }

# [dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"