[package]
name = "types"
version = "0.1.0"
authors = ["paranoidcake <victorpanayotov@gmail.com>"]
edition = "2018"

[lib]
name = "types"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-typescript-definition = "0.1.4"